# robotics-algorithms

./: .gitignore  .pdm-python  README.md  kf_odo.py  pyproject.toml  simulation.py  test_kalman.py
control/: pid.py
controllers/: __init__.py
examples/: falling_ball.py
experiments/: pole_placement_control.ipynb
experiments/.ipynb_checkpoints/: pole_placement_control-checkpoint.ipynb
filters/: kalman.py  montecarlo.py
filters/kalman/: core.py  kalman.py  validators.py
lie/: so3.py
models/: ackerman_car.py  dubins_car.py  mass_on_line.py  model.py  model1D.py
motion/: smooth_motion.py
notebooks/: Untitled.ipynb
notebooks/.virtual_documents/: Untitled.ipynb
optimization/: Basics.ipynb
optimization/.ipynb_checkpoints/: Basics-checkpoint.ipynb
robotics_algorithms/control/: pid.py
robotics_algorithms/filters/: information_filter.py  montecarlo.py
robotics_algorithms/filters/kalman/: core.py  kalman.py  validators.py
robotics_algorithms/models/: ackerman_car.py  dubins_car.py  mass_on_line.py  model.py  model1D.py
robotics_algorithms/utils/: math.py  plot.py
scratches/: scratch_3.py
slam/: beacon_odom.yaml  beacon_truth.yaml  beacons.py
