[tool.poetry]
name = "robotics-algorithms"
version = "0.1.0"
description = ""
authors = ["El Jawad Alaa <ejalaa12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.24.0"
scipy = "^1.14.1"
control = "^0.9.4"
matplotlib = "3.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
