[project]
name = "robotics-algorithms"
version = "0.1.0"
description = ""
authors = [
  { name="El Jawad Alaa", email="ejalaa12@gmail.com"},
]
readme = "README.md"
requires-python= ">=3.12"

dependencies = [
  "numpy >=1.24.0",
  "scipy >=1.14.1",
  "control >=0.9.4",
  "matplotlib >=3.7.5",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
